fixed db connect issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
               <% } %>
               <tfoot>
                 <tr>
-                  <td colspan="2">There are <%= i %> todos.</td>
+                  <td colspan="2">There are <%= i %> Users.</td>
                 </tr>
               </tfoot>
             </table>
