--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         <div
           class="column is-10 is-offset-1 notification is-info is-light box container"
         >
-          <div class="title">Web Users</div>
+          <div class="title">Mock Db</div>
           <% if (locals.allUsers) { %>
           <div class="table-container">
             <table class="table is-bordered is-hoverable is-striped is-narrow">
